feat: port AE2 core architecture to 1.12.2 runtime
- migrate key-based storage, crafting, and network interactions onto the 1.12.2 Forge runtime
- rebuild grid/node/service lifecycle, ticking, storage mounts, and crafting provider flows
- restore NBT, packet, capability, and world interaction chains around the target version

feat: restore gameplay systems and machine behavior on 1.12.2

- complete spatial storage, quantum entanglement, molecular assembler, inscriber, and pattern provider logic
- recover immersive world recipes, crystal growth, meteorite, entropy, and related machine-side workflows
- align server/client state sync so machine state, power, and network availability update correctly after world load

feat: rebuild terminal and container interaction stack

- migrate terminal, crafting, pattern, chest, workbench, and portable container behavior to the target UI stack
- restore slot interaction, quantity editing, tooltip rendering, ghost ingredient import, and HEI/JEI drag/click flows
- repair inventory refresh, fluid/item marking, and client-side display consistency across AE GUIs

feat: align rendering pipeline with target branch behavior

- reimplement block, part, item, facade, cell, and GUI rendering paths for the 1.12.2 client
- restore machine internals, particles, storage-cell display, cable facade visuals, and world-facing model transforms
- fix light, culling, layering, and GL state handling to match expected in-world and GUI rendering results

feat: restore compatibility and addon-facing extension points

- wire optional integrations and capability-based hooks back into the 1.12.2 environment
- complete upgrade, storage cell, P2P attunement, movable tile entity, crank, and related addon APIs
- refresh API documentation to reflect the actual public surface and build layout of this branch