@@ -23,49 +23,27 @@
 
 package appeng.api.client;
 
+import appeng.api.stacks.AEKey;
+import net.minecraft.client.Minecraft;
+import net.minecraft.util.text.ITextComponent;
+import net.minecraft.util.text.TextComponentString;
+import net.minecraft.world.World;
+import net.minecraftforge.fml.relauncher.Side;
+import net.minecraftforge.fml.relauncher.SideOnly;
+
 import java.util.List;
 
-import com.mojang.blaze3d.vertex.PoseStack;
-
-import net.minecraft.client.Minecraft;
-import net.minecraft.client.gui.GuiGraphics;
-import net.minecraft.client.renderer.MultiBufferSource;
-import net.minecraft.network.chat.Component;
-import net.minecraft.world.level.Level;
-import net.neoforged.api.distmarker.Dist;
-import net.neoforged.api.distmarker.OnlyIn;
-
-import appeng.api.stacks.AEKey;
-import appeng.util.Platform;
-
-/**
- * Client-side rendering of AE stacks. Must be registered in {@link AEKeyRendering} for each storage channel!
- */
-@OnlyIn(Dist.CLIENT)
+@SideOnly(Side.CLIENT)
 public interface AEKeyRenderHandler<T extends AEKey> {
-    /**
-     * Draw the stack, for example the item or the fluid sprite, but not the amount.
-     */
-    void drawInGui(Minecraft minecraft, GuiGraphics guiGraphics, int x, int y, T stack);
+    void drawInGui(Minecraft minecraft, int x, int y, T stack);
 
-    /**
-     * Draw the representation of a key in-world on the face of a block. Used for displaying it on screens and monitors.
-     */
-    void drawOnBlockFace(PoseStack poseStack, MultiBufferSource buffers, T what, float scale, int combinedLight,
-            Level level);
+    void drawOnBlockFace(T what, float scale, int combinedLight, World level);
 
-    /**
-     * Name of the stack, ignoring the amount.
-     */
-    Component getDisplayName(T stack);
+    ITextComponent getDisplayName(T stack);
 
-    /**
-     * Return the full tooltip, with the name of the stack and any additional lines.
-     */
-    default List<Component> getTooltip(T stack) {
-        return List.of(
-                getDisplayName(stack),
-                // Append the name of the mod by default as mods such as REI would also add that
-                Component.literal(Platform.formatModName(stack.getModId())));
+    default List<ITextComponent> getTooltip(T stack) {
+        return java.util.Arrays.asList(
+            getDisplayName(stack),
+            new TextComponentString(stack.getModId()));
     }
 }
