@@ -1,35 +1,4 @@
-/*
- * This file is part of Applied Energistics 2.
- * Copyright (c) 2021, TeamAppliedEnergistics, All rights reserved.
- *
- * Applied Energistics 2 is free software: you can redistribute it and/or modify
- * it under the terms of the GNU Lesser General Public License as published by
- * the Free Software Foundation, either version 3 of the License, or
- * (at your option) any later version.
- *
- * Applied Energistics 2 is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU Lesser General Public License for more details.
- *
- * You should have received a copy of the GNU Lesser General Public License
- * along with Applied Energistics 2.  If not, see <http://www.gnu.org/licenses/lgpl>.
- */
-
 package appeng.crafting.pattern;
-
-import java.util.List;
-import java.util.Objects;
-
-import com.google.common.base.Preconditions;
-
-import org.jetbrains.annotations.Nullable;
-
-import net.minecraft.core.HolderLookup;
-import net.minecraft.nbt.ListTag;
-import net.minecraft.world.item.ItemStack;
-import net.minecraft.world.item.TooltipFlag;
-import net.minecraft.world.level.Level;
 
 import appeng.api.crafting.IPatternDetails;
 import appeng.api.crafting.PatternDetailsTooltip;
@@ -38,35 +7,42 @@ import appeng.api.stacks.AEItemKey;
 import appeng.api.stacks.AEKey;
 import appeng.api.stacks.GenericStack;
 import appeng.api.stacks.KeyCounter;
+import net.minecraft.client.util.ITooltipFlag;
+import net.minecraft.item.ItemStack;
+import net.minecraft.nbt.NBTTagCompound;
+import net.minecraft.nbt.NBTTagList;
+import net.minecraft.world.World;
+import org.jetbrains.annotations.Nullable;
+
+import java.util.List;
+import java.util.Objects;
 
 public class AEProcessingPattern implements IPatternDetails {
     public static final int MAX_INPUT_SLOTS = 9 * 9;
     public static final int MAX_OUTPUT_SLOTS = 3 * 9;
 
     private final AEItemKey definition;
-    private final List<GenericStack> sparseInputs, sparseOutputs;
+    private final List<GenericStack> sparseInputs;
+    private final List<GenericStack> sparseOutputs;
     private final Input[] inputs;
     private final List<GenericStack> condensedOutputs;
 
     public AEProcessingPattern(AEItemKey definition) {
         this.definition = definition;
 
-        var encodedPattern = definition.get(AEComponents.ENCODED_PROCESSING_PATTERN);
+        var encodedPattern = getEncodedTag(definition);
         if (encodedPattern == null) {
             throw new IllegalArgumentException("Given item does not encode a processing pattern: " + definition);
-        } else if (encodedPattern.containsMissingContent()) {
-            throw new IllegalArgumentException("Pattern references missing content");
         }
 
-        this.sparseInputs = encodedPattern.sparseInputs();
-        this.sparseOutputs = encodedPattern.sparseOutputs();
+        this.sparseInputs = readGenericStackList(encodedPattern.getTagList("inputs", 10));
+        this.sparseOutputs = readGenericStackList(encodedPattern.getTagList("outputs", 10));
         var condensedInputs = AEPatternHelper.condenseStacks(sparseInputs);
         this.inputs = new Input[condensedInputs.size()];
         for (int i = 0; i < inputs.length; ++i) {
             inputs[i] = new Input(condensedInputs.get(i));
         }
 
-        // Ordering is preserved by condenseStacks
         this.condensedOutputs = AEPatternHelper.condenseStacks(sparseOutputs);
     }
 
@@ -74,11 +50,45 @@ public class AEProcessingPattern implements IPatternDetails {
         if (sparseInputs.stream().noneMatch(Objects::nonNull)) {
             throw new IllegalArgumentException("At least one input must be non-null.");
         }
-        Objects.requireNonNull(sparseOutputs.get(0),
-                "The first (primary) output must be non-null.");
+        Objects.requireNonNull(sparseOutputs.getFirst(), "The first (primary) output must be non-null.");
 
-        stack.set(AEComponents.ENCODED_PROCESSING_PATTERN, new EncodedProcessingPattern(
-                sparseInputs, sparseOutputs));
+        var encoded = new NBTTagCompound();
+        encoded.setTag("inputs", writeGenericStackList(sparseInputs));
+        encoded.setTag("outputs", writeGenericStackList(sparseOutputs));
+        stack.setTagInfo(AEComponents.ENCODED_PROCESSING_PATTERN_COMPONENT.name(), encoded);
+    }
+
+    public static PatternDetailsTooltip getInvalidPatternTooltip(ItemStack stack, World level,
+                                                                 @Nullable Exception cause, ITooltipFlag flags) {
+        var tooltip = new PatternDetailsTooltip(PatternDetailsTooltip.OUTPUT_TEXT_PRODUCES);
+        var encoded = stack.getTagCompound();
+        if (encoded != null) {
+            var tag = AEComponents.ENCODED_PROCESSING_PATTERN_COMPONENT.readFrom(encoded);
+            if (tag == null) {
+                return tooltip;
+            }
+            readGenericStackList(tag.getTagList("inputs", 10)).stream().filter(Objects::nonNull).forEach(tooltip::addInput);
+            readGenericStackList(tag.getTagList("outputs", 10)).stream().filter(Objects::nonNull).forEach(tooltip::addOutput);
+        }
+        return tooltip;
+    }
+
+    @Nullable
+    private static NBTTagCompound getEncodedTag(AEItemKey definition) {
+        var stack = definition.getReadOnlyStack();
+        var tag = stack.getTagCompound();
+        if (tag == null) {
+            return null;
+        }
+        return AEComponents.ENCODED_PROCESSING_PATTERN_COMPONENT.readFrom(tag);
+    }
+
+    private static NBTTagList writeGenericStackList(List<GenericStack> stacks) {
+        return GenericStack.writeList(stacks);
+    }
+
+    private static List<GenericStack> readGenericStackList(NBTTagList list) {
+        return GenericStack.readList(list);
     }
 
     @Override
@@ -117,7 +127,6 @@ public class AEProcessingPattern implements IPatternDetails {
     @Override
     public void pushInputsToExternalInventory(KeyCounter[] inputHolder, PatternInputSink inputSink) {
         if (sparseInputs.size() == inputs.length) {
-            // No compression -> no need to reorder
             IPatternDetails.super.pushInputsToExternalInventory(inputHolder, inputSink);
             return;
         }
@@ -127,7 +136,6 @@ public class AEProcessingPattern implements IPatternDetails {
             allInputs.addAll(counter);
         }
 
-        // Push according to sparse input order
         for (var sparseInput : sparseInputs) {
             if (sparseInput == null) {
                 continue;
@@ -139,7 +147,7 @@ public class AEProcessingPattern implements IPatternDetails {
 
             if (available < amount) {
                 throw new RuntimeException("Expected at least %d of %s when pushing pattern, but only %d available"
-                        .formatted(amount, key, available));
+                    .formatted(amount, key, available));
             }
 
             inputSink.pushInput(key, amount);
@@ -147,30 +155,17 @@ public class AEProcessingPattern implements IPatternDetails {
         }
     }
 
-    public static PatternDetailsTooltip getInvalidPatternTooltip(ItemStack stack, Level level,
-            @Nullable Exception cause, TooltipFlag flags) {
-        var tooltip = new PatternDetailsTooltip(PatternDetailsTooltip.OUTPUT_TEXT_PRODUCES);
-
-        var encodedPattern = stack.get(AEComponents.ENCODED_PROCESSING_PATTERN);
-        if (encodedPattern != null) {
-            encodedPattern.sparseInputs().stream().filter(Objects::nonNull).forEach(tooltip::addInput);
-            encodedPattern.sparseOutputs().stream().filter(Objects::nonNull).forEach(tooltip::addOutput);
-        }
-
-        return tooltip;
-    }
-
     private static class Input implements IInput {
         private final GenericStack[] template;
         private final long multiplier;
 
         private Input(GenericStack stack) {
-            this.template = new GenericStack[] { new GenericStack(stack.what(), 1) };
+            this.template = new GenericStack[]{new GenericStack(stack.what(), 1)};
             this.multiplier = stack.amount();
         }
 
         @Override
-        public GenericStack[] getPossibleInputs() {
+        public GenericStack[] possibleInputs() {
             return template;
         }
 
@@ -180,7 +175,7 @@ public class AEProcessingPattern implements IPatternDetails {
         }
 
         @Override
-        public boolean isValid(AEKey input, Level level) {
+        public boolean isValid(AEKey input, World level) {
             return input.matches(template[0]);
         }
 
@@ -189,18 +184,5 @@ public class AEProcessingPattern implements IPatternDetails {
         public AEKey getRemainingKey(AEKey template) {
             return null;
         }
-    }
-
-    private static ListTag encodeStackList(GenericStack[] stacks, HolderLookup.Provider registries) {
-        ListTag tag = new ListTag();
-        boolean foundStack = false;
-        for (var stack : stacks) {
-            tag.add(GenericStack.writeTag(registries, stack));
-            if (stack != null && stack.amount() > 0) {
-                foundStack = true;
-            }
-        }
-        Preconditions.checkArgument(foundStack, "List passed to pattern must contain at least one stack.");
-        return tag;
     }
 }
