@@ -18,22 +18,19 @@
 
 package appeng.me.cells;
 
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-import java.util.Optional;
-
-import net.minecraft.world.inventory.tooltip.TooltipComponent;
-import net.minecraft.world.item.ItemStack;
-
 import appeng.api.stacks.GenericStack;
 import appeng.api.storage.cells.ICellHandler;
 import appeng.api.storage.cells.ISaveProvider;
 import appeng.api.storage.cells.StorageCell;
 import appeng.core.AEConfig;
-import appeng.items.contents.CellConfig;
 import appeng.items.storage.CreativeCellItem;
 import appeng.items.storage.StorageCellTooltipComponent;
+import it.unimi.dsi.fastutil.objects.ObjectArrayList;
+import net.minecraft.item.ItemStack;
+
+import javax.annotation.Nullable;
+import java.util.Collections;
+import java.util.List;
 
 /**
  * Cell handler for creative storage cells (both fluid and item), which do not allow item insertion.
@@ -42,50 +39,44 @@ public class CreativeCellHandler implements ICellHandler {
     public static final CreativeCellHandler INSTANCE = new CreativeCellHandler();
 
     @Override
-    public boolean isCell(ItemStack is) {
-        return !is.isEmpty() && is.getItem() instanceof CreativeCellItem;
+    public boolean isCell(ItemStack stack) {
+        return !stack.isEmpty() && stack.getItem() instanceof CreativeCellItem;
     }
 
+    @Nullable
     @Override
-    public StorageCell getCellInventory(ItemStack is, ISaveProvider container) {
-        if (!is.isEmpty() && is.getItem() instanceof CreativeCellItem) {
-            return new CreativeCellInventory(is);
+    public StorageCell getCellInventory(ItemStack stack, @Nullable ISaveProvider host) {
+        if (!stack.isEmpty() && stack.getItem() instanceof CreativeCellItem) {
+            return new CreativeCellInventory(stack);
         }
         return null;
     }
 
-    public Optional<TooltipComponent> getTooltipImage(ItemStack is) {
-        var handler = getCellInventory(is, null);
-        if (handler == null) { // Check that this is a creative cell
-            return Optional.empty();
+    @Nullable
+    public java.util.Optional<StorageCellTooltipComponent> getTooltipData(ItemStack stack) {
+        var handler = getCellInventory(stack, null);
+        if (handler == null || !(stack.getItem() instanceof CreativeCellItem cellItem)) {
+            return java.util.Optional.empty();
         }
 
-        var cc = CellConfig.create(is);
-
-        boolean hasMoreContent;
         List<GenericStack> content;
+        boolean hasMoreContent;
         if (AEConfig.instance().isTooltipShowCellContent()) {
-            content = new ArrayList<>();
-
-            var maxCountShown = AEConfig.instance().getTooltipMaxCellContentShown();
-
-            for (var key : cc.keySet()) {
+            content = new ObjectArrayList<>();
+            int maxCountShown = AEConfig.instance().getTooltipMaxCellContentShown();
+            for (var key : cellItem.getConfigInventory(stack).keySet()) {
                 content.add(new GenericStack(key, 1));
             }
-
             hasMoreContent = content.size() > maxCountShown;
             if (content.size() > maxCountShown) {
-                content.subList(maxCountShown, content.size()).clear();
+                content = new ObjectArrayList<>(content.subList(0, maxCountShown));
             }
         } else {
-            hasMoreContent = false;
             content = Collections.emptyList();
+            hasMoreContent = false;
         }
 
-        return Optional.of(new StorageCellTooltipComponent(
-                List.of(),
-                content,
-                hasMoreContent,
-                false));
+        return java.util.Optional.of(
+            new StorageCellTooltipComponent(Collections.emptyList(), content, hasMoreContent, false));
     }
 }
