@@ -18,30 +18,6 @@
 
 package appeng.me.service;
 
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.Comparator;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.Map;
-import java.util.Set;
-import java.util.UUID;
-import java.util.concurrent.ExecutorService;
-import java.util.concurrent.Executors;
-import java.util.concurrent.Future;
-import java.util.concurrent.ThreadFactory;
-
-import com.google.common.collect.HashMultimap;
-import com.google.common.collect.ImmutableSet;
-import com.google.common.collect.Multimap;
-import com.google.common.collect.Sets;
-
-import org.apache.commons.lang3.mutable.MutableObject;
-import org.jetbrains.annotations.Nullable;
-
-import net.minecraft.nbt.CompoundTag;
-import net.minecraft.world.level.Level;
-
 import appeng.api.config.Actionable;
 import appeng.api.crafting.IPatternDetails;
 import appeng.api.networking.GridHelper;
@@ -66,7 +42,6 @@ import appeng.api.networking.storage.IStorageService;
 import appeng.api.stacks.AEKey;
 import appeng.api.stacks.GenericStack;
 import appeng.api.storage.AEKeyFilter;
-import appeng.blockentity.crafting.CraftingBlockEntity;
 import appeng.crafting.CraftingCalculation;
 import appeng.crafting.CraftingLink;
 import appeng.crafting.CraftingLinkNexus;
@@ -77,30 +52,47 @@ import appeng.me.helpers.InterestManager;
 import appeng.me.helpers.StackWatcher;
 import appeng.me.service.helpers.CraftingServiceStorage;
 import appeng.me.service.helpers.NetworkCraftingProviders;
+import appeng.tile.crafting.TileCraftingUnit;
+import com.google.common.collect.HashMultimap;
+import com.google.common.collect.ImmutableSet;
+import com.google.common.collect.Multimap;
+import it.unimi.dsi.fastutil.objects.Object2ObjectMap;
+import it.unimi.dsi.fastutil.objects.Object2ObjectOpenHashMap;
+import it.unimi.dsi.fastutil.objects.ObjectArrayList;
+import it.unimi.dsi.fastutil.objects.ObjectSet;
+import it.unimi.dsi.fastutil.objects.ObjectOpenHashSet;
+import it.unimi.dsi.fastutil.objects.Reference2ObjectMap;
+import it.unimi.dsi.fastutil.objects.Reference2ObjectOpenHashMap;
+import net.minecraft.nbt.NBTTagCompound;
+import net.minecraft.world.World;
+import org.jetbrains.annotations.Nullable;
+
+import java.util.Collection;
+import java.util.Comparator;
+import java.util.Set;
+import java.util.UUID;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+import java.util.concurrent.Future;
+import java.util.concurrent.ThreadFactory;
+import java.util.concurrent.atomic.AtomicReference;
 
 public class CraftingService implements ICraftingService, IGridServiceProvider {
 
-    /**
-     * Sorts Crafting CPUs by Co-Processors in descending order ("fast first"), and storage in ascending order (to
-     * minimize the storage waste for jobs.).
-     */
     private static final Comparator<CraftingCPUCluster> FAST_FIRST_COMPARATOR = Comparator
-            .comparingInt(CraftingCPUCluster::getCoProcessors)
-            .reversed()
-            .thenComparingLong(CraftingCPUCluster::getAvailableStorage);
-    /**
-     * Sorts Crafting CPUs by Co-Processors in ascending order ("fast last"), and storage in ascending order (to
-     * minimize the storage waste for jobs.).
-     */
+        .comparingInt(CraftingCPUCluster::getCoProcessors)
+        .reversed()
+        .thenComparingLong(CraftingCPUCluster::getAvailableStorage);
+
     private static final Comparator<CraftingCPUCluster> FAST_LAST_COMPARATOR = Comparator
-            .comparingInt(CraftingCPUCluster::getCoProcessors)
-            .thenComparingLong(CraftingCPUCluster::getAvailableStorage);
+        .comparingInt(CraftingCPUCluster::getCoProcessors)
+        .thenComparingLong(CraftingCPUCluster::getAvailableStorage);
 
     private static final ExecutorService CRAFTING_POOL;
 
     static {
-        final ThreadFactory factory = ar -> {
-            final Thread crafting = new Thread(ar, "AE Crafting Calculator");
+        final ThreadFactory factory = runnable -> {
+            final Thread crafting = new Thread(runnable, "AE Crafting Calculator");
             crafting.setDaemon(true);
             return crafting;
         };
@@ -108,22 +100,21 @@ public class CraftingService implements ICraftingService, IGridServiceProvider {
         CRAFTING_POOL = Executors.newCachedThreadPool(factory);
 
         GridHelper.addGridServiceEventHandler(GridCraftingCpuChange.class, ICraftingService.class,
-                (service, event) -> {
-                    ((CraftingService) service).updateList = true;
-                });
+            (service, ignoredEvent) -> ((CraftingService) service).updateList = true);
     }
 
-    private final Set<CraftingCPUCluster> craftingCPUClusters = new HashSet<>();
-    private final Map<IGridNode, StackWatcher<ICraftingWatcherNode>> craftingWatchers = new HashMap<>();
+    private final ObjectSet<CraftingCPUCluster> craftingCPUClusters = new ObjectOpenHashSet<>();
+    private final Reference2ObjectMap<IGridNode, StackWatcher<ICraftingWatcherNode>> craftingWatchers =
+        new Reference2ObjectOpenHashMap<>();
     private final IGrid grid;
     private final NetworkCraftingProviders craftingProviders = new NetworkCraftingProviders();
-    private final Map<UUID, CraftingLinkNexus> craftingLinks = new HashMap<>();
+    private final Object2ObjectMap<UUID, CraftingLinkNexus> craftingLinks = new Object2ObjectOpenHashMap<>();
     private final Multimap<AEKey, StackWatcher<ICraftingWatcherNode>> interests = HashMultimap.create();
     private final InterestManager<StackWatcher<ICraftingWatcherNode>> interestManager = new InterestManager<>(
-            this.interests);
+        this.interests);
     private final IEnergyService energyGrid;
-    private final Set<AEKey> currentlyCrafting = new HashSet<>();
-    private final Set<AEKey> currentlyCraftable = new HashSet<>();
+    private final ObjectSet<AEKey> currentlyCrafting = new ObjectOpenHashSet<>();
+    private final ObjectSet<AEKey> currentlyCraftable = new ObjectOpenHashSet<>();
     private long lastProcessedCraftingLogicChangeTick;
     private long lastProcessedCraftableChangeTick;
     private boolean updateList = false;
@@ -142,70 +133,65 @@ public class CraftingService implements ICraftingService, IGridServiceProvider {
         if (this.updateList) {
             this.updateList = false;
             this.updateCPUClusters();
-            lastProcessedCraftingLogicChangeTick = -1; // Ensure caches below are also updated
+            this.lastProcessedCraftingLogicChangeTick = -1;
         }
 
         this.craftingLinks.values().removeIf(nexus -> nexus.isDead(this.grid, this));
 
         long latestChange = 0;
         for (var cpu : this.craftingCPUClusters) {
-            cpu.craftingLogic.tickCraftingLogic(energyGrid, this);
-            latestChange = Math.max(
-                    latestChange,
-                    cpu.craftingLogic.getLastModifiedOnTick());
+            cpu.craftingLogic.tickCraftingLogic(this.energyGrid, this);
+            latestChange = Math.max(latestChange, cpu.craftingLogic.getLastModifiedOnTick());
         }
 
-        // There's nothing to do if we weren't crafting anything and we don't have any CPUs that could craft
-        if (latestChange != lastProcessedCraftingLogicChangeTick) {
-            lastProcessedCraftingLogicChangeTick = latestChange;
+        if (latestChange != this.lastProcessedCraftingLogicChangeTick) {
+            this.lastProcessedCraftingLogicChangeTick = latestChange;
 
-            Set<AEKey> previouslyCrafting = currentlyCrafting.isEmpty() ? Set.of() : new HashSet<>(currentlyCrafting);
+            Set<AEKey> previouslyCrafting = this.currentlyCrafting.isEmpty()
+                ? Set.of()
+                : new ObjectOpenHashSet<>(this.currentlyCrafting);
             this.currentlyCrafting.clear();
 
             for (var cpu : this.craftingCPUClusters) {
                 cpu.craftingLogic.getAllWaitingFor(this.currentlyCrafting);
             }
 
-            // Notify watchers about items no longer being crafted, but only if there can be changes and there are
-            // watchers
-            if (!interests.isEmpty() && !(previouslyCrafting.isEmpty() && currentlyCrafting.isEmpty())) {
-                var changed = new HashSet<AEKey>();
-                changed.addAll(Sets.difference(previouslyCrafting, currentlyCrafting));
-                changed.addAll(Sets.difference(currentlyCrafting, previouslyCrafting));
+            if (!this.interests.isEmpty() && !(previouslyCrafting.isEmpty() && this.currentlyCrafting.isEmpty())) {
+                var changed = new ObjectOpenHashSet<AEKey>();
+                addSetDifference(changed, previouslyCrafting, this.currentlyCrafting);
+                addSetDifference(changed, this.currentlyCrafting, previouslyCrafting);
                 for (var what : changed) {
-                    for (var watcher : interestManager.get(what)) {
+                    for (var watcher : this.interestManager.get(what)) {
                         watcher.getHost().onRequestChange(what);
                     }
-                    for (var watcher : interestManager.getAllStacksWatchers()) {
+                    for (var watcher : this.interestManager.getAllStacksWatchers()) {
                         watcher.getHost().onRequestChange(what);
                     }
                 }
             }
         }
 
-        // Throttle updates of craftables to once every 10 ticks
-        if (lastProcessedCraftableChangeTick != craftingProviders.getLastModifiedOnTick()) {
-            lastProcessedCraftableChangeTick = craftingProviders.getLastModifiedOnTick();
+        if (this.lastProcessedCraftableChangeTick != this.craftingProviders.getLastModifiedOnTick()) {
+            this.lastProcessedCraftableChangeTick = this.craftingProviders.getLastModifiedOnTick();
 
-            // If everything is empty, there's nothing to do
-            if (!currentlyCraftable.isEmpty() || !craftingProviders.getCraftableKeys().isEmpty()
-                    || !craftingProviders.getEmittableKeys().isEmpty()) {
-                Set<AEKey> previouslyCraftable = currentlyCraftable.isEmpty() ? Set.of()
-                        : new HashSet<>(currentlyCraftable);
+            if (!this.currentlyCraftable.isEmpty() || !this.craftingProviders.getCraftableKeys().isEmpty()
+                || !this.craftingProviders.getEmittableKeys().isEmpty()) {
+                Set<AEKey> previouslyCraftable = this.currentlyCraftable.isEmpty()
+                    ? Set.of()
+                    : new ObjectOpenHashSet<>(this.currentlyCraftable);
                 this.currentlyCraftable.clear();
-                currentlyCraftable.addAll(craftingProviders.getCraftableKeys());
-                currentlyCraftable.addAll(craftingProviders.getEmittableKeys());
+                this.currentlyCraftable.addAll(this.craftingProviders.getCraftableKeys());
+                this.currentlyCraftable.addAll(this.craftingProviders.getEmittableKeys());
 
-                // Only perform the change tracking if there are watchers
-                if (!interests.isEmpty()) {
-                    var changedCraftable = new HashSet<AEKey>();
-                    changedCraftable.addAll(Sets.difference(previouslyCraftable, currentlyCraftable));
-                    changedCraftable.addAll(Sets.difference(currentlyCraftable, previouslyCraftable));
+                if (!this.interests.isEmpty()) {
+                    var changedCraftable = new ObjectOpenHashSet<AEKey>();
+                    addSetDifference(changedCraftable, previouslyCraftable, this.currentlyCraftable);
+                    addSetDifference(changedCraftable, this.currentlyCraftable, previouslyCraftable);
                     for (var what : changedCraftable) {
-                        for (var watcher : interestManager.get(what)) {
+                        for (var watcher : this.interestManager.get(what)) {
                             watcher.getHost().onCraftableChange(what);
                         }
-                        for (var watcher : interestManager.getAllStacksWatchers()) {
+                        for (var watcher : this.interestManager.getAllStacksWatchers()) {
                             watcher.getHost().onCraftableChange(what);
                         }
                     }
@@ -214,9 +200,16 @@ public class CraftingService implements ICraftingService, IGridServiceProvider {
         }
     }
 
+    private static <T> void addSetDifference(Set<T> output, Set<T> left, Set<T> right) {
+        for (var element : left) {
+            if (!right.contains(element)) {
+                output.add(element);
+            }
+        }
+    }
+
     @Override
     public void removeNode(IGridNode gridNode) {
-
         var craftingWatcher = this.craftingWatchers.remove(gridNode);
         if (craftingWatcher != null) {
             craftingWatcher.destroy();
@@ -233,22 +226,19 @@ public class CraftingService implements ICraftingService, IGridServiceProvider {
 
         this.craftingProviders.removeProvider(gridNode);
 
-        if (gridNode.getOwner() instanceof CraftingBlockEntity) {
+        if (gridNode.getOwner() instanceof TileCraftingUnit) {
             this.updateList = true;
         }
     }
 
     @Override
-    public void addNode(IGridNode gridNode, @Nullable CompoundTag savedData) {
-
-        // The provider can already be added because it gets callback from the storage service,
-        // in which it might already register itself before coming to this point.
+    public void addNode(IGridNode gridNode, @Nullable NBTTagCompound savedData) {
         this.craftingProviders.removeProvider(gridNode);
         this.craftingProviders.addProvider(gridNode);
 
         var watchingNode = gridNode.getService(ICraftingWatcherNode.class);
         if (watchingNode != null) {
-            var watcher = new StackWatcher<>(interestManager, watchingNode);
+            var watcher = new StackWatcher<>(this.interestManager, watchingNode);
             this.craftingWatchers.put(gridNode, watcher);
             watchingNode.updateWatcher(watcher);
         }
@@ -256,33 +246,33 @@ public class CraftingService implements ICraftingService, IGridServiceProvider {
         var craftingRequester = gridNode.getService(ICraftingRequester.class);
         if (craftingRequester != null) {
             for (ICraftingLink link : craftingRequester.getRequestedJobs()) {
-                if (link instanceof CraftingLink) {
-                    this.addLink((CraftingLink) link);
+                if (link instanceof CraftingLink craftingLink) {
+                    this.addLink(craftingLink);
                 }
             }
         }
 
-        if (gridNode.getOwner() instanceof CraftingBlockEntity) {
+        if (gridNode.getOwner() instanceof TileCraftingUnit) {
             this.updateList = true;
         }
     }
 
     @Override
     public Set<AEKey> getCraftables(AEKeyFilter filter) {
-        return craftingProviders.getCraftables(filter);
+        return this.craftingProviders.getCraftables(filter);
     }
 
     private void updateCPUClusters() {
         this.craftingCPUClusters.clear();
 
-        for (var blockEntity : this.grid.getMachines(CraftingBlockEntity.class)) {
-            final CraftingCPUCluster cluster = blockEntity.getCluster();
+        for (var tile : this.grid.getMachines(TileCraftingUnit.class)) {
+            final CraftingCPUCluster cluster = tile.getCluster();
             if (cluster != null) {
                 this.craftingCPUClusters.add(cluster);
 
                 ICraftingLink maybeLink = cluster.craftingLogic.getLastLink();
-                if (maybeLink != null) {
-                    this.addLink((CraftingLink) maybeLink);
+                if (maybeLink instanceof CraftingLink craftingLink) {
+                    this.addLink(craftingLink);
                 }
             }
         }
@@ -293,10 +283,7 @@ public class CraftingService implements ICraftingService, IGridServiceProvider {
             return;
         }
 
-        CraftingLinkNexus nexus = this.craftingLinks.get(link.getCraftingID());
-        if (nexus == null) {
-            this.craftingLinks.put(link.getCraftingID(), nexus = new CraftingLinkNexus(link.getCraftingID()));
-        }
+        CraftingLinkNexus nexus = this.craftingLinks.computeIfAbsent(link.getCraftingID(), CraftingLinkNexus::new);
 
         link.setNexus(nexus);
     }
@@ -322,19 +309,19 @@ public class CraftingService implements ICraftingService, IGridServiceProvider {
     }
 
     @Override
-    public void addGlobalCraftingProvider(ICraftingProvider cc) {
-        this.craftingProviders.addProvider(cc);
+    public void addGlobalCraftingProvider(ICraftingProvider provider) {
+        this.craftingProviders.addProvider(provider);
     }
 
     @Override
-    public void removeGlobalCraftingProvider(ICraftingProvider cc) {
-        this.craftingProviders.removeProvider(cc);
+    public void removeGlobalCraftingProvider(ICraftingProvider provider) {
+        this.craftingProviders.removeProvider(provider);
     }
 
     @Override
-    public void refreshGlobalCraftingProvider(ICraftingProvider cc) {
-        this.craftingProviders.removeProvider(cc);
-        this.craftingProviders.addProvider(cc);
+    public void refreshGlobalCraftingProvider(ICraftingProvider provider) {
+        this.craftingProviders.removeProvider(provider);
+        this.craftingProviders.addProvider(provider);
     }
 
     @Nullable
@@ -344,40 +331,38 @@ public class CraftingService implements ICraftingService, IGridServiceProvider {
     }
 
     @Override
-    public Future<ICraftingPlan> beginCraftingCalculation(Level level, ICraftingSimulationRequester simRequester,
-            AEKey what, long amount, CalculationStrategy strategy) {
-        if (level == null || simRequester == null) {
+    public Future<ICraftingPlan> beginCraftingCalculation(World world, ICraftingSimulationRequester simRequester,
+                                                          AEKey what, long amount, CalculationStrategy strategy) {
+        if (world == null || simRequester == null) {
             throw new IllegalArgumentException("Invalid Crafting Job Request");
         }
 
-        final CraftingCalculation job = new CraftingCalculation(level, grid, simRequester,
-                new GenericStack(what, amount), strategy);
+        final CraftingCalculation job = new CraftingCalculation(world, this.grid, simRequester,
+            new GenericStack(what, amount), strategy);
 
         return CRAFTING_POOL.submit(job::run);
     }
 
     @Override
-    public ICraftingSubmitResult submitJob(ICraftingPlan job, ICraftingRequester requestingMachine, ICraftingCPU target,
-            boolean prioritizePower, IActionSource src) {
+    public ICraftingSubmitResult submitJob(ICraftingPlan job, @Nullable ICraftingRequester requestingMachine,
+                                           @Nullable ICraftingCPU target, boolean prioritizePower, IActionSource src) {
         if (job.simulation()) {
             return CraftingSubmitResult.INCOMPLETE_PLAN;
         }
 
         CraftingCPUCluster cpuCluster;
 
-        if (target instanceof CraftingCPUCluster) {
-            cpuCluster = (CraftingCPUCluster) target;
+        if (target instanceof CraftingCPUCluster craftingCPUCluster) {
+            cpuCluster = craftingCPUCluster;
         } else {
-            var unsuitableCpusResult = new MutableObject<UnsuitableCpus>();
-            cpuCluster = findSuitableCraftingCPU(job, prioritizePower, src, unsuitableCpusResult);
+            var unsuitableCpusResult = new AtomicReference<UnsuitableCpus>();
+            cpuCluster = this.findSuitableCraftingCPU(job, prioritizePower, src, unsuitableCpusResult);
             if (cpuCluster == null) {
-                var unsuitableCpus = unsuitableCpusResult.getValue();
-                // If no CPUs were unsuitable, but we couldn't find one, that means there aren't any
+                var unsuitableCpus = unsuitableCpusResult.get();
                 if (unsuitableCpus == null) {
                     return CraftingSubmitResult.NO_CPU_FOUND;
-                } else {
-                    return CraftingSubmitResult.noSuitableCpu(unsuitableCpus);
                 }
+                return CraftingSubmitResult.noSuitableCpu(unsuitableCpus);
             }
         }
 
@@ -386,12 +371,13 @@ public class CraftingService implements ICraftingService, IGridServiceProvider {
 
     @Nullable
     private CraftingCPUCluster findSuitableCraftingCPU(ICraftingPlan job, boolean prioritizePower, IActionSource src,
-            MutableObject<UnsuitableCpus> unsuitableCpus) {
-        var validCpusClusters = new ArrayList<CraftingCPUCluster>(this.craftingCPUClusters.size());
+                                                       AtomicReference<UnsuitableCpus> unsuitableCpus) {
+        var validCpuClusters = new ObjectArrayList<CraftingCPUCluster>(this.craftingCPUClusters.size());
         int offline = 0;
         int busy = 0;
         int tooSmall = 0;
         int excluded = 0;
+
         for (var cpu : this.craftingCPUClusters) {
             if (!cpu.isActive()) {
                 offline++;
@@ -409,33 +395,29 @@ public class CraftingService implements ICraftingService, IGridServiceProvider {
                 excluded++;
                 continue;
             }
-            validCpusClusters.add(cpu);
+            validCpuClusters.add(cpu);
         }
 
-        if (validCpusClusters.isEmpty()) {
+        if (validCpuClusters.isEmpty()) {
             if (offline > 0 || busy > 0 || tooSmall > 0 || excluded > 0) {
-                unsuitableCpus.setValue(new UnsuitableCpus(offline, busy, tooSmall, excluded));
+                unsuitableCpus.set(new UnsuitableCpus(offline, busy, tooSmall, excluded));
             }
             return null;
         }
 
-        validCpusClusters.sort((a, b) -> {
-            // Prioritize sorting by selected mode
-            var firstPreferred = a.isPreferredFor(src);
-            var secondPreferred = b.isPreferredFor(src);
+        validCpuClusters.sort((first, second) -> {
+            var firstPreferred = first.isPreferredFor(src);
+            var secondPreferred = second.isPreferredFor(src);
             if (firstPreferred != secondPreferred) {
-                // Sort such that preferred comes first, not preferred second
                 return Boolean.compare(secondPreferred, firstPreferred);
             }
 
-            if (prioritizePower) {
-                return FAST_FIRST_COMPARATOR.compare(a, b);
-            } else {
-                return FAST_LAST_COMPARATOR.compare(a, b);
-            }
+            return prioritizePower
+                ? FAST_FIRST_COMPARATOR.compare(first, second)
+                : FAST_LAST_COMPARATOR.compare(first, second);
         });
 
-        return validCpusClusters.get(0);
+        return validCpuClusters.getFirst();
     }
 
     @Override
@@ -450,13 +432,13 @@ public class CraftingService implements ICraftingService, IGridServiceProvider {
     }
 
     @Override
-    public boolean canEmitFor(AEKey someItem) {
-        return this.craftingProviders.canEmitFor(someItem);
+    public boolean canEmitFor(AEKey what) {
+        return this.craftingProviders.canEmitFor(what);
     }
 
     @Override
     public boolean isRequesting(AEKey what) {
-        return currentlyCrafting.contains(what);
+        return this.currentlyCrafting.contains(what);
     }
 
     @Override
@@ -472,14 +454,19 @@ public class CraftingService implements ICraftingService, IGridServiceProvider {
 
     @Override
     public boolean isRequestingAny() {
-        return !currentlyCrafting.isEmpty();
+        return !this.currentlyCrafting.isEmpty();
     }
 
     public Iterable<ICraftingProvider> getProviders(IPatternDetails key) {
-        return craftingProviders.getMediums(key);
+        return this.craftingProviders.getMediums(key);
     }
 
     public boolean hasCpu(ICraftingCPU cpu) {
-        return this.craftingCPUClusters.contains(cpu);
+        for (CraftingCPUCluster cluster : this.craftingCPUClusters) {
+            if (cluster == cpu) {
+                return true;
+            }
+        }
+        return false;
     }
 }
